🐛 fix: empty block spacing

--- a/src/screens/character/ui/character-info/character-info.css
+++ b/src/screens/character/ui/character-info/character-info.css
@@ -27,5 +27,9 @@
     @apply container grid min-h-40 pt-6;
     @apply grid-cols-[0px_auto];
     @apply sm:grid-cols-[220px_auto] sm:gap-x-9;
+
+    &__mobile-hidden {
+      @apply max-sm:hidden;
+    }
   }
 }
